--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body{
 }
 
 .services{
-    background-image: url("img/nyjah-poster.jpg");
+    background-image: url("img/GROUP_SHOT-p-2000.jpg");
    color: whitesmoke;
     width: 100%;
 
